Bug: 0 Comment: Remove yellow hover over. It is unreadable on small screens

--- a/ssf/web/docroot/css/ss_mobile_wap.css
+++ b/ssf/web/docroot/css/ss_mobile_wap.css
@@ -27,8 +27,7 @@ body {
 	font-family:  Helvetica, sans-serif;
 	}
 a:hover {
-	color: #ff0000;
-	background-color: #ffff00;
+	color: #000000;
 	text-decoration: none;
 }
 
